--- a/backend/project/requirements.txt
+++ b/backend/project/requirements.txt
@@ -1,14 +1,30 @@
+aiofiles==23.2.1
+amqp==5.1.1
 annotated-types==0.5.0
 anyio==3.7.1
+async-timeout==4.0.2
 asyncpg==0.28.0
 bcrypt==4.0.1
+billiard==4.1.0
+black==23.7.0
+cachetools==5.3.1
+celery==5.3.1
 certifi==2023.5.7
 cffi==1.15.1
+chardet==5.2.0
+charset-normalizer==3.2.0
 click==8.1.5
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 cryptography==41.0.2
+cssselect==1.2.0
+cssutils==2.7.1
 dnspython==2.4.0
+docopt==0.6.2
 ecdsa==0.18.0
 email-validator==2.0.0.post2
+emails==0.6
 exceptiongroup==1.1.2
 fastapi==0.100.0
 greenlet==2.0.2
@@ -18,35 +34,67 @@ httptools==0.6.0
 httpx==0.24.1
 idna==3.4
 iniconfig==2.0.0
+isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+kombu==5.3.1
+lxml==4.9.3
 MarkupSafe==2.1.3
+motor==3.2.0
+mypy-extensions==1.0.0
 orjson==3.9.2
 packaging==23.1
+paramiko==3.2.0
 passlib==1.7.4
+pathspec==0.11.1
+platformdirs==3.9.1
 pluggy==1.2.0
+premailer==3.10.0
+prompt-toolkit==3.0.39
 psycopg2-binary==2.9.6
 pyasn1==0.5.0
+pycap==2.4.0
 pycparser==2.21
+pycrypto==2.6.1
 pydantic==2.0.3
 pydantic-extra-types==2.0.0
 pydantic-settings==2.0.2
 pydantic_core==2.3.0
 pyhumps==3.8.0
+pymongo==4.4.1
+PyNaCl==1.5.0
+pysftp==0.2.9
 pytest==7.4.0
+pytest-asyncio==0.21.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.6
 PyYAML==6.0.1
+redcap-cli==0.1.0
+redis==4.6.0
+requests==2.31.0
 rsa==4.9
+semantic-version==2.10.0
+setuptools-scm==7.1.0
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.19
 starlette==0.27.0
+tomli==2.0.1
+types-aiofiles==23.2.0.0
 types-passlib==1.7.7.12
+types-pyasn1==0.4.0.6
+types-pyOpenSSL==23.2.0.2
+types-python-jose==3.3.4.8
+types-redis==4.6.0.3
 typing_extensions==4.7.1
+tzdata==2023.3
 ujson==5.8.0
+urllib3==2.0.4
 uvicorn==0.23.1
 uvloop==0.17.0
+vine==5.0.0
 watchfiles==0.19.0
+wcwidth==0.2.6
 websockets==11.0.3
