--- a/backend/project/requirements.txt
+++ b/backend/project/requirements.txt
@@ -47,6 +47,7 @@ packaging==23.1
 paramiko==3.2.0
 passlib==1.7.4
 pathspec==0.11.1
+Pillow==10.0.0
 platformdirs==3.9.1
 pluggy==1.2.0
 premailer==3.10.0
@@ -64,6 +65,7 @@ pyhumps==3.8.0
 pymongo==4.4.1
 PyNaCl==1.5.0
 pysftp==0.2.9
+pytesseract==0.3.10
 pytest==7.4.0
 pytest-asyncio==0.21.1
 python-dateutil==2.8.2
