--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -13,11 +13,13 @@
     "@types/jest": "^28.1.8",
     "@types/node": "^12.20.55",
     "@types/react": "^18.2.23",
+    "@types/react-datepicker": "^4.15.1",
     "@types/react-dom": "^18.2.8",
     "axios": "^1.5.1",
     "framer-motion": "^6.5.1",
     "openapi-typescript-codegen": "^0.25.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
