--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -16,6 +16,7 @@
     "@types/react-datepicker": "^4.15.1",
     "@types/react-dom": "^18.2.8",
     "axios": "^1.5.1",
+    "chakra-react-select": "^4.7.2",
     "framer-motion": "^6.5.1",
     "openapi-typescript-codegen": "^0.25.0",
     "react": "^18.2.0",
