Started export functionality with celery

--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,8 @@ cython_debug/
 *.jpg
 *.png
 
+public/*
+
 
 
 # REACT
@@ -206,3 +208,5 @@ packages/react-devtools-inline/dist
 packages/react-devtools-shell/dist
 packages/react-devtools-timeline/dist
 *node_modules/*
+
+/backend/project/public/**
